# RAG_PostgreSQL

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: api.py  example.env  insert_vectors.py  similarity_search.py
app/config/: settings.py
app/database/: vector_store.py
app/services/: llm_factory.py  synthesizer.py
