[project]
name = "pgvectorscale-rag-solution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "instructor>=1.15.1",
    "openai>=2.33.0",
    "pandas>=3.0.2",
    "psycopg>=3.3.4",
    "python-dotenv>=1.2.2",
    "timescale-vector>=0.0.7",
]
